refactor: 이벤트 클래스 변경점에 따라 `benefit` 도메인 리팩토링